--- a/md/00.md
+++ b/md/00.md
@@ -4,6 +4,23 @@ author: Anunda. J. Green
 date:
 tags: gme
 ---
+# Info
+beat opponent in turn based combat
+
+# Difficulty
+\* x 3
+
+# Characters
+\* x 2
+
+# Quality
+\* x 3
+
+# Experience
+\* x 4.5
+
+# Recommendation
+to solve stalemates
 boo
 # Figures
 
