--- a/md/01.md
+++ b/md/01.md
@@ -1,5 +1,5 @@
 ---
-title: u3231044_11689_Assignment3
+title: Cards against humanity
 author: Anunda. J. Green
 ---
 <!---
@@ -20,62 +20,20 @@ Submission Requirements:
 journal named "u3231044_11689_Assignment2" with 3 posts containing rich media, such as images, gifs, and/or videos
 u7198321_11689_Assignment1
 --->
-# Altar of Kings
-## info
-beat opponent in turn based combat
-
-## difficulty
-\* x 3
-
-## characters
-\* x 2
-
-## quality
-\* x 3
-
-## experience
-\* x 4.5
-
-## recommendation
-to solve stalemates
-
-# Pinkatana
-## info
-rescue your lover Purple via skill/presision based platforming
-
-## difficulty
-\* x 5
-
-## characters
-- Pink
-- Purple
-- tutorial cat
-- enemies
-
-## quality
-\* x 4.5
-
-## experience
-\* x 4.5
-
-## recommendation
-yes
-
-# Cards against humanity
-## info
+# Info
 to score points and have a laugh
 
-## difficulty
+# Difficulty
 \* x 2
 
-## characters
+# Characters
 none
 
-## quality
+# Quality
 \* x 4
 
-## experience
+# Experience
 \* x 4.5
 
-## recommendation
+# Recommendation
 yes
